fix wrap spaces

--- a/css/styles.css
+++ b/css/styles.css
@@ -750,14 +750,14 @@ line-height: 2.5rem; /* 39.063% */
     h1 {
         font-size: 3rem;
     }
-}   
+
     .container_advantages2 {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 2.5rem;
 }
-
+ 
      .footer-container {
         display: flex;
         flex-direction: column;
@@ -783,4 +783,18 @@ line-height: 2.5rem; /* 39.063% */
         background-repeat: no-repeat;
     }
 
+    .price_element {
+        padding-bottom: 0;
+        text-align: center;
+        border-radius: 10px;
+        border: 2px solid #2F7BBD;
+        width: 200px;
+        min-width: 50%;
+       /* height: 55.125rem; */
+    }
+
+    .price_element--pink {
+        border: 2px solid #F36;
+    }
+}
 }
